--- a/src/ExampleFeatureFlagService.Client/_Imports.razor
+++ b/src/ExampleFeatureFlagService.Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using ExampleFeatureFlagService.Client
 @using ExampleFeatureFlagService.Client.Layout
+@using ExampleFeatureFlagService.Client.Shared
