make use of sdk

--- a/src/ExampleFeatureFlagService.Client/Pages/Flags.razor
+++ b/src/ExampleFeatureFlagService.Client/Pages/Flags.razor
@@ -1,6 +1,6 @@
 @page "/flags"
-@using ExampleFeatureFlagService.Client.Models
-@inject ExampleFeatureFlagService.Client.Services.FeatureFlagService FlagService
+@using ExampleFeatureFlagService.SDK.Models
+@inject ExampleFeatureFlagService.SDK.Services.FeatureFlagService FlagService
 
 <h3>Feature Flags</h3>
 
