--- a/src/ExampleFeatureFlagService.ExampleApp/Views/Home/Index.cshtml
+++ b/src/ExampleFeatureFlagService.ExampleApp/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ExampleFeatureFlagService.ExampleApp.Models.FeatureFlag>
+﻿@model List<ExampleFeatureFlagService.SDK.Models.FeatureFlag>
 
 <h1>Example Application</h1>
 
